syntax = "proto3";
package poc.poc;

import "gogoproto/gogo.proto";
import "poc/poc/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "poc/x/poc/types";

// GenesisState defines the poc module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
